UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/PSR_OrderCompletion_Update__e.object-meta.xml
<CustomObject>
    <description>This is to process the M6 PSR Order Completion status to DPI Orchestration Plan to start SubmitGroupOrderMember</description>
    <label>PSR OrderCompletion Update</label>
    <pluralLabel>PSR OrderCompletion Updates</pluralLabel>
</CustomObject>