UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>CorrelationId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>