UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/FRL_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>FRL_Reference_Id__c</fullName>
    <label>FRL Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>