UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/GroupOrderTransactionCount__c.field-meta.xml
<CustomField>
    <fullName>GroupOrderTransactionCount__c</fullName>
    <label>GroupOrderTransactionCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>