UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/JSONAttribute__c.field-meta.xml
<CustomField>
    <fullName>JSONAttribute__c</fullName>
    <label>JSONAttribute</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>