UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>