UCF-APR2.4/ftr main/force-app/main/default/objects/PSR_OrderCompletion_Update__e/fields/Orchestration_Item__c.field-meta.xml
<CustomField>
    <fullName>Orchestration_Item__c</fullName>
    <label>Orchestration Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>